manifests/secret.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pet-projects
---
# To create this secret, run:
# kubectl create secret docker-registry registry-secret \
#   --docker-server=registry.tantai.dev \
#   --docker-username=YOUR_USERNAME \
#   --docker-password=YOUR_PASSWORD \
#   --docker-email=YOUR_EMAIL \
#   --namespace=default
